--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,36 +23,47 @@
   }
 }
 
-#backtotop-button {
-  background-color: #000000;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  color: white;
-  font-size: 2em;
-  line-height: 45px;
-  color: #fff;
-  text-align: center;
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  transition: background-color .3s,
-    opacity .5s, visibility .5s;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1000;
+#steps {
+  h2 {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  p {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  h3 {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  ul {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  li {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
 }
 
-#backtotop-button.show {
-  opacity: 1;
-  visibility: visible;
-  cursor: pointer;
+#contact {
+  h2 {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
 }
 
-#backtotop-button.show:hover {
-  background-color: rgb(70, 70, 70);
-}
-
+/* Animations for hero */
 @-webkit-keyframes text-focus-in {
   0% {
     -webkit-filter: blur(12px);
@@ -117,6 +128,50 @@
     transform: translateZ(0) translateY(0);
     opacity: 1;
   }
+}
+
+/* Animation for steps */
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateX(-25px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+
+#backtotop-button {
+  background-color: #000000;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  color: white;
+  font-size: 2em;
+  line-height: 45px;
+  color: #fff;
+  text-align: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s,
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+
+#backtotop-button.show {
+  opacity: 1;
+  visibility: visible;
+  cursor: pointer;
+}
+
+#backtotop-button.show:hover {
+  background-color: rgb(70, 70, 70);
 }
 
 footer {
